# paranoid-qa

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
data/corpus/sample/: report_01.txt  report_02.txt  report_03.txt  report_04.txt  report_05.txt  report_06.txt
demo-frontend/: app.js  index.html
evals/: critic.py  phoenix_critic.py  phoenix_retrieval.py  run.py  verification_ablation.py
evals/data/: critic_gold.jsonl  retrieval_gold.jsonl
paranoid_qa/: __init__.py  __main__.py  aggregate.py  config.py  demo.py  graph.py  index.py  models.py  nodes.py  router.py  schemas.py  server.py  telemetry.py  tracing.py  verify.py
paranoid_qa/aggregate/: __init__.py  graph.py  indexing.py  nodes.py  retrieval.py  verification.py
paranoid_qa/contracts/: __init__.py  aggregate.py  common.py  specific.py  state.py
paranoid_qa/corpus/: __init__.py  loader.py  repository.py
paranoid_qa/llm/: __init__.py  factory.py  policy.py
paranoid_qa/serving/: __init__.py  api.py  demo.py  telemetry.py
paranoid_qa/specific/: __init__.py  graph.py  indexing.py  nodes.py  retrieval.py  verification.py
paranoid_qa/workflow/: __init__.py  graph.py  outcomes.py  routing.py
scripts/: build_critic_gold.py  build_indexes.py  build_retrieval_gold.py  export_graph.py  generate_toy_corpus.py  load_test.py  sample_corpus.py
tests/: conftest.py  test_architecture.py  test_demo_gate.py  test_server.py
tests/contracts/: test_aggregate.py  test_specific.py  test_state.py
tests/corpus/: test_loader.py  test_repository.py
tests/llm/: test_policy.py
tests/serving/: test_api.py
tests/specific/: test_verification.py
tests/workflow/: test_graph.py  test_outcomes.py  test_routing.py
