[project]
name = "paranoid-qa"
version = "0.1.0"
description = "Grounded, self-verifying question answering over a document corpus (agentic RAG + blind critic)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2",
    "langchain-openai>=0.2",
    "llama-index-core>=0.11",
    "llama-index-llms-openai>=0.2",
    "llama-index-embeddings-openai>=0.2",
    "llama-index-readers-file>=0.2",
    "llama-index-retrievers-bm25>=0.4",
    "pycryptodome>=3.20",   # decrypt AES-encrypted PDFs during ingestion
    "pydantic>=2.6",
    "lightrag-hku>=1.5.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]
ollama = ["langchain-ollama>=0.2", "llama-index-llms-ollama>=0.3", "llama-index-embeddings-ollama>=0.3"]
anthropic = ["langchain-anthropic>=0.2"]
cohere = ["langchain-cohere>=0.3", "llama-index-embeddings-cohere>=0.2"]
rerank = ["sentence-transformers"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100

[tool.pyright]
reportTypedDictNotRequiredAccess = false

[tool.pytest.ini_options]
addopts = "-q"
